# aead-io

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: file.rs
src/: array_buffer.rs  buffer.rs  error.rs  lib.rs  reader.rs  rw.rs  writer.rs
