[package]
name = "aead-io"
version = "0.1.0"
edition = "2018"
resolver = "2"

[features]
default = ["std"]
std = ["aead/alloc"]

[dependencies]
aead = { version = "0.4.3", default-features = false, features = ["stream"] }

[dev-dependencies]
aead = { version = "0.4.3", default-features = false, features = ["alloc"] }
chacha20poly1305 = "0.9.0"
