[package]
name = "aead-io"
version = "0.1.3"
edition = "2018"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/riddleandcode/aead-io"
documentation = "https://docs.rs/aead-io/"
repository = "https://github.com/riddleandcode/aead-io"
description = "A wrapper around Write/Read interfaces with AEAD"
keywords = ["aead", "io", "encryption", "decryption", "cryptography"]
categories = ["cryptography", "no-std"]
resolver = "2"

[features]
default = ["std", "array-buffer"]
std = ["alloc", "aead/std", "arrayvec/std"]
alloc = ["aead/alloc"]
array-buffer = ["arrayvec"]

[dependencies]
aead = { version = "0.4.3", default-features = false, features = ["stream"] }
arrayvec = { version = "0.7.2", optional = true, default-features = false }

[dev-dependencies]
aead = { version = "0.4.3", default-features = false, features = ["alloc"] }
chacha20poly1305 = "0.9.0"
rand = "0.8.5"
tempfile = "3.3.0"
